...
                    NotificationCenter.default.post(name: .menuOpenPDF, object: nil)
                }
                .keyboardShortcut("o", modifiers: .command)
            }

            // View menu: zoom controls
            CommandMenu("View") {
                Button("Zoom In") {
                    NotificationCenter.default.post(name: .zoomIn, object: nil)
                }
                .keyboardShortcut("+", modifiers: .command)

                Button("Zoom Out") {
...
                    NotificationCenter.default.post(name: .menuSecureErase, object: nil)
                }
            }
        }
        
        // Define the window for the About view.
        Window("About Marcedit", id: "about") {
            AboutView()
        }
        .windowResizability(.contentSize) // Makes the About window non-resizable
        
        // Define the window for Settings.
        Window("Settings", id: "settings") {
...
